[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-rotator"
version = "1.1.0"
description = "Run Claude CLI subprocesses with automatic multi-account rotation and rate limit handling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "jtxmp" },
]
keywords = [
    "claude",
    "claude-code",
    "cli",
    "subprocess",
    "rate-limit",
    "account-rotation",
    "multi-account",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/jtxmp/claude-rotator"
Repository = "https://github.com/jtxmp/claude-rotator"
Issues = "https://github.com/jtxmp/claude-rotator/issues"

[tool.hatch.build.targets.wheel]
packages = ["claude_rotator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
